# html-element-attributes

./: build.py  package-lock.json  package.json  pyproject.toml  readme.md
.github/workflows/: release.yml
HtmlElementAttributes/: __init__.py  html_element_attributes.py
